fix: z-index for modal window

--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -2,7 +2,7 @@
 
 .backdrop {
   position: fixed;
-  z-index: 3;
+  z-index: 10;
 
   display: flex;
   justify-content: center;
@@ -21,7 +21,7 @@
 
 .content {
   position: relative;
-  z-index: 4;
+  z-index: 11;
 
   
   display: flex;
